--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "chico-rei/gollog-api",
+    "name": "chico-rei/smartlog-api",
     "description": "",
     "keywords": [
         "swagger",
